modules/server/src/main/java/com/monarchapis/apimanager/analytics/grammar/EventQueryParser.java
// Generated from EventQuery.g4 by ANTLR 4.3
package com.monarchapis.apimanager.analytics.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class EventQueryParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		EQ=1, LT=2, LE=3, GT=4, GE=5, NE=6, RE=7, IN=8, NIN=9, ALL=10, OR=11, 
		NOR=12, DOT=13, OPEN_PAR=14, CLOSE_PAR=15, OPEN_BRACKET=16, CLOSE_BRACKET=17, 
		PLUS=18, COMMA=19, STRING=20, INTEGER=21, DECIMAL=22, BOOLEAN=23, NULL=24, 
		NAME=25, REGEX=26, WS=27;
	public static final String[] tokenNames = {
		"<INVALID>", "'eq'", "'lt'", "LE", "'gt'", "GE", "'ne'", "RE", "'in'", 
		"'nin'", "'all'", "'or'", "'nor'", "'.'", "'('", "')'", "'['", "']'", 
		"PLUS", "COMMA", "STRING", "INTEGER", "DECIMAL", "BOOLEAN", "NULL", "NAME", 
		"REGEX", "WS"
	};
	public static final int
		RULE_expression = 0, RULE_filter = 1, RULE_fieldFilter = 2, RULE_equalsComparison = 3, 
		RULE_otherComparison = 4, RULE_simpleComparison = 5, RULE_containsComparison = 6, 
		RULE_arrayComparison = 7, RULE_regularExpressionEvaluation = 8, RULE_operation = 9, 
		RULE_containsOperation = 10, RULE_arrayOperation = 11, RULE_logicalGroup = 12, 
		RULE_list = 13, RULE_nameValuePair = 14, RULE_value = 15, RULE_numeric = 16;
	public static final String[] ruleNames = {
		"expression", "filter", "fieldFilter", "equalsComparison", "otherComparison", 
		"simpleComparison", "containsComparison", "arrayComparison", "regularExpressionEvaluation", 
		"operation", "containsOperation", "arrayOperation", "logicalGroup", "list", 
		"nameValuePair", "value", "numeric"
	};

	@Override
	public String getGrammarFileName() { return "EventQuery.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public EventQueryParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ExpressionContext extends ParserRuleContext {
		public List<FilterContext> filter() {
			return getRuleContexts(FilterContext.class);
		}
		public List<TerminalNode> PLUS() { return getTokens(EventQueryParser.PLUS); }
		public FilterContext filter(int i) {
			return getRuleContext(FilterContext.class,i);
		}
		public TerminalNode PLUS(int i) {
			return getToken(EventQueryParser.PLUS, i);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EventQueryListener ) ((EventQueryListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EventQueryListener ) ((EventQueryListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EventQueryVisitor ) return ((EventQueryVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34); filter();
			setState(39);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PLUS) {
				{
				{
				setState(35); match(PLUS);
				setState(36); filter();
				}
				}
				setState(41);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FilterContext extends ParserRuleContext {
		public FieldFilterContext fieldFilter() {
			return getRuleContext(FieldFilterContext.class,0);
		}
		public LogicalGroupContext logicalGroup() {
			return getRuleContext(LogicalGroupContext.class,0);
		}
		public FilterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EventQueryListener ) ((EventQueryListener)listener).enterFilter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EventQueryListener ) ((EventQueryListener)listener).exitFilter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EventQueryVisitor ) return ((EventQueryVisitor<? extends T>)visitor).visitFilter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FilterContext filter() throws RecognitionException {
		FilterContext _localctx = new FilterContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_filter);
		try {
			setState(44);
			switch (_input.LA(1)) {
			case NAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(42); fieldFilter();
				}
				break;
			case OR:
			case NOR:
				enterOuterAlt(_localctx, 2);
				{
				setState(43); logicalGroup();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldFilterContext extends ParserRuleContext {
		public EqualsComparisonContext equalsComparison() {
			return getRuleContext(EqualsComparisonContext.class,0);
		}
		public List<TerminalNode> DOT() { return getTokens(EventQueryParser.DOT); }
		public List<OtherComparisonContext> otherComparison() {
			return getRuleContexts(OtherComparisonContext.class);
		}
		public TerminalNode NAME() { return getToken(EventQueryParser.NAME, 0); }
		public OtherComparisonContext otherComparison(int i) {
			return getRuleContext(OtherComparisonContext.class,i);
		}
		public TerminalNode DOT(int i) {
			return getToken(EventQueryParser.DOT, i);
		}
		public FieldFilterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldFilter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EventQueryListener ) ((EventQueryListener)listener).enterFieldFilter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EventQueryListener ) ((EventQueryListener)listener).exitFieldFilter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EventQueryVisitor ) return ((EventQueryVisitor<? extends T>)visitor).visitFieldFilter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldFilterContext fieldFilter() throws RecognitionException {
		FieldFilterContext _localctx = new FieldFilterContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_fieldFilter);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46); match(NAME);
			setState(55);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				{
				setState(47); match(DOT);
				setState(48); equalsComparison();
				}
				}
				break;

			case 2:
				{
				setState(51); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(49); match(DOT);
					setState(50); otherComparison();
					}
					}
					setState(53); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==DOT );
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EqualsComparisonContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode OPEN_PAR() { return getToken(EventQueryParser.OPEN_PAR, 0); }
		public TerminalNode CLOSE_PAR() { return getToken(EventQueryParser.CLOSE_PAR, 0); }
		public TerminalNode EQ() { return getToken(EventQueryParser.EQ, 0); }
		public EqualsComparisonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_equalsComparison; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EventQueryListener ) ((EventQueryListener)listener).enterEqualsComparison(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EventQueryListener ) ((EventQueryListener)listener).exitEqualsComparison(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EventQueryVisitor ) return ((EventQueryVisitor<? extends T>)visitor).visitEqualsComparison(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EqualsComparisonContext equalsComparison() throws RecognitionException {
		EqualsComparisonContext _localctx = new EqualsComparisonContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_equalsComparison);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57); match(EQ);
			setState(58); match(OPEN_PAR);
			setState(59); value();
			setState(60); match(CLOSE_PAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OtherComparisonContext extends ParserRuleContext {
		public ContainsComparisonContext containsComparison() {
			return getRuleContext(ContainsComparisonContext.class,0);
		}
		public SimpleComparisonContext simpleComparison() {
			return getRuleContext(SimpleComparisonContext.class,0);
		}
		public RegularExpressionEvaluationContext regularExpressionEvaluation() {
			return getRuleContext(RegularExpressionEvaluationContext.class,0);
		}
		public ArrayComparisonContext arrayComparison() {
			return getRuleContext(ArrayComparisonContext.class,0);
		}
		public OtherComparisonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_otherComparison; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EventQueryListener ) ((EventQueryListener)listener).enterOtherComparison(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EventQueryListener ) ((EventQueryListener)listener).exitOtherComparison(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EventQueryVisitor ) return ((EventQueryVisitor<? extends T>)visitor).visitOtherComparison(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OtherComparisonContext otherComparison() throws RecognitionException {
		OtherComparisonContext _localctx = new OtherComparisonContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_otherComparison);
		try {
			setState(66);
			switch (_input.LA(1)) {
			case LT:
			case LE:
			case GT:
			case GE:
			case NE:
				enterOuterAlt(_localctx, 1);
				{
				setState(62); simpleComparison();
				}
				break;
			case IN:
			case NIN:
				enterOuterAlt(_localctx, 2);
				{
				setState(63); containsComparison();
				}
				break;
			case ALL:
				enterOuterAlt(_localctx, 3);
				{
				setState(64); arrayComparison();
				}
				break;
			case RE:
				enterOuterAlt(_localctx, 4);
				{
				setState(65); regularExpressionEvaluation();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimpleComparisonContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public OperationContext operation() {
			return getRuleContext(OperationContext.class,0);
		}
		public TerminalNode OPEN_PAR() { return getToken(EventQueryParser.OPEN_PAR, 0); }
		public TerminalNode CLOSE_PAR() { return getToken(EventQueryParser.CLOSE_PAR, 0); }
		public SimpleComparisonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleComparison; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EventQueryListener ) ((EventQueryListener)listener).enterSimpleComparison(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EventQueryListener ) ((EventQueryListener)listener).exitSimpleComparison(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EventQueryVisitor ) return ((EventQueryVisitor<? extends T>)visitor).visitSimpleComparison(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SimpleComparisonContext simpleComparison() throws RecognitionException {
		SimpleComparisonContext _localctx = new SimpleComparisonContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_simpleComparison);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68); operation();
			setState(69); match(OPEN_PAR);
			setState(70); value();
			setState(71); match(CLOSE_PAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContainsComparisonContext extends ParserRuleContext {
		public ContainsOperationContext containsOperation() {
			return getRuleContext(ContainsOperationContext.class,0);
		}
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public TerminalNode OPEN_PAR() { return getToken(EventQueryParser.OPEN_PAR, 0); }
		public TerminalNode CLOSE_PAR() { return getToken(EventQueryParser.CLOSE_PAR, 0); }
		public ContainsComparisonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_containsComparison; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EventQueryListener ) ((EventQueryListener)listener).enterContainsComparison(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EventQueryListener ) ((EventQueryListener)listener).exitContainsComparison(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EventQueryVisitor ) return ((EventQueryVisitor<? extends T>)visitor).visitContainsComparison(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContainsComparisonContext containsComparison() throws RecognitionException {
		ContainsComparisonContext _localctx = new ContainsComparisonContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_containsComparison);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73); containsOperation();
			setState(74); match(OPEN_PAR);
			setState(75); list();
			setState(76); match(CLOSE_PAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayComparisonContext extends ParserRuleContext {
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public TerminalNode OPEN_PAR() { return getToken(EventQueryParser.OPEN_PAR, 0); }
		public ArrayOperationContext arrayOperation() {
			return getRuleContext(ArrayOperationContext.class,0);
		}
		public TerminalNode CLOSE_PAR() { return getToken(EventQueryParser.CLOSE_PAR, 0); }
		public ArrayComparisonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayComparison; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EventQueryListener ) ((EventQueryListener)listener).enterArrayComparison(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EventQueryListener ) ((EventQueryListener)listener).exitArrayComparison(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EventQueryVisitor ) return ((EventQueryVisitor<? extends T>)visitor).visitArrayComparison(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrayComparisonContext arrayComparison() throws RecognitionException {
		ArrayComparisonContext _localctx = new ArrayComparisonContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_arrayComparison);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78); arrayOperation();
			setState(79); match(OPEN_PAR);
			setState(80); list();
			setState(81); match(CLOSE_PAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RegularExpressionEvaluationContext extends ParserRuleContext {
		public TerminalNode RE() { return getToken(EventQueryParser.RE, 0); }
		public TerminalNode OPEN_PAR() { return getToken(EventQueryParser.OPEN_PAR, 0); }
		public TerminalNode REGEX() { return getToken(EventQueryParser.REGEX, 0); }
		public TerminalNode CLOSE_PAR() { return getToken(EventQueryParser.CLOSE_PAR, 0); }
		public RegularExpressionEvaluationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regularExpressionEvaluation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EventQueryListener ) ((EventQueryListener)listener).enterRegularExpressionEvaluation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EventQueryListener ) ((EventQueryListener)listener).exitRegularExpressionEvaluation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EventQueryVisitor ) return ((EventQueryVisitor<? extends T>)visitor).visitRegularExpressionEvaluation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RegularExpressionEvaluationContext regularExpressionEvaluation() throws RecognitionException {
		RegularExpressionEvaluationContext _localctx = new RegularExpressionEvaluationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_regularExpressionEvaluation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83); match(RE);
			setState(84); match(OPEN_PAR);
			setState(85); match(REGEX);
			setState(86); match(CLOSE_PAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperationContext extends ParserRuleContext {
		public TerminalNode LT() { return getToken(EventQueryParser.LT, 0); }
		public TerminalNode NE() { return getToken(EventQueryParser.NE, 0); }
		public TerminalNode LE() { return getToken(EventQueryParser.LE, 0); }
		public TerminalNode GT() { return getToken(EventQueryParser.GT, 0); }
		public TerminalNode GE() { return getToken(EventQueryParser.GE, 0); }
		public OperationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EventQueryListener ) ((EventQueryListener)listener).enterOperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EventQueryListener ) ((EventQueryListener)listener).exitOperation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EventQueryVisitor ) return ((EventQueryVisitor<? extends T>)visitor).visitOperation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperationContext operation() throws RecognitionException {
		OperationContext _localctx = new OperationContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_operation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LT) | (1L << LE) | (1L << GT) | (1L << GE) | (1L << NE))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContainsOperationContext extends ParserRuleContext {
		public TerminalNode IN() { return getToken(EventQueryParser.IN, 0); }
		public TerminalNode NIN() { return getToken(EventQueryParser.NIN, 0); }
		public ContainsOperationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_containsOperation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EventQueryListener ) ((EventQueryListener)listener).enterContainsOperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EventQueryListener ) ((EventQueryListener)listener).exitContainsOperation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EventQueryVisitor ) return ((EventQueryVisitor<? extends T>)visitor).visitContainsOperation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContainsOperationContext containsOperation() throws RecognitionException {
		ContainsOperationContext _localctx = new ContainsOperationContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_containsOperation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			_la = _input.LA(1);
			if ( !(_la==IN || _la==NIN) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayOperationContext extends ParserRuleContext {
		public TerminalNode ALL() { return getToken(EventQueryParser.ALL, 0); }
		public ArrayOperationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayOperation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EventQueryListener ) ((EventQueryListener)listener).enterArrayOperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EventQueryListener ) ((EventQueryListener)listener).exitArrayOperation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EventQueryVisitor ) return ((EventQueryVisitor<? extends T>)visitor).visitArrayOperation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrayOperationContext arrayOperation() throws RecognitionException {
		ArrayOperationContext _localctx = new ArrayOperationContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_arrayOperation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92); match(ALL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicalGroupContext extends ParserRuleContext {
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode CLOSE_BRACKET() { return getToken(EventQueryParser.CLOSE_BRACKET, 0); }
		public List<TerminalNode> COMMA() { return getTokens(EventQueryParser.COMMA); }
		public TerminalNode OR() { return getToken(EventQueryParser.OR, 0); }
		public TerminalNode OPEN_BRACKET() { return getToken(EventQueryParser.OPEN_BRACKET, 0); }
		public TerminalNode OPEN_PAR() { return getToken(EventQueryParser.OPEN_PAR, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public TerminalNode NOR() { return getToken(EventQueryParser.NOR, 0); }
		public TerminalNode COMMA(int i) {
			return getToken(EventQueryParser.COMMA, i);
		}
		public TerminalNode CLOSE_PAR() { return getToken(EventQueryParser.CLOSE_PAR, 0); }
		public LogicalGroupContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicalGroup; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EventQueryListener ) ((EventQueryListener)listener).enterLogicalGroup(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EventQueryListener ) ((EventQueryListener)listener).exitLogicalGroup(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EventQueryVisitor ) return ((EventQueryVisitor<? extends T>)visitor).visitLogicalGroup(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LogicalGroupContext logicalGroup() throws RecognitionException {
		LogicalGroupContext _localctx = new LogicalGroupContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_logicalGroup);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			_la = _input.LA(1);
			if ( !(_la==OR || _la==NOR) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(95); match(OPEN_PAR);
			setState(96); match(OPEN_BRACKET);
			setState(97); expression();
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(98); match(COMMA);
				setState(99); expression();
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(105); match(CLOSE_BRACKET);
			setState(106); match(CLOSE_PAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListContext extends ParserRuleContext {
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public TerminalNode CLOSE_BRACKET() { return getToken(EventQueryParser.CLOSE_BRACKET, 0); }
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public List<TerminalNode> COMMA() { return getTokens(EventQueryParser.COMMA); }
		public TerminalNode OPEN_BRACKET() { return getToken(EventQueryParser.OPEN_BRACKET, 0); }
		public TerminalNode COMMA(int i) {
			return getToken(EventQueryParser.COMMA, i);
		}
		public ListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EventQueryListener ) ((EventQueryListener)listener).enterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EventQueryListener ) ((EventQueryListener)listener).exitList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EventQueryVisitor ) return ((EventQueryVisitor<? extends T>)visitor).visitList(this);
			else return visitor.visitChildren(this);
		}
	}
